//CODEGEN BELOW - DO NOT TOUCH ME
syntax = "proto3";
package solana_test;

message AddressWrapper {
  Address inner = 1;
}

message IxErrorWrapper {
  InstructionError inner = 1;
}

message KeypairWrapper {
  Keypair key = 1;
}

message SignatureWrapper {
  Signature sig = 1;
}

message TxErrorWrapper {
  TransactionError inner = 1;
}

